move PalisadesLakes.bib loading into PalisadesLakes.sty

--- a/tex/latex/PalisadesLakes/PalisadesLakes.sty
+++ b/tex/latex/PalisadesLakes/PalisadesLakes.sty
@@ -529,6 +529,12 @@ backref=true,
 % control whether bibliography is printed or not; default true
 \newtoggle{printbibliography}
 \toggletrue{printbibliography}
+
+% universal bibliography
+% ought to be on the search path if PalisadesLakes.sty is
+
+\addbibresource{PalisadesLakes.bib}
+
 %-----------------------------------------------------------------
 % index
 %-----------------------------------------------------------------
