fix glossary, etc., loading: move files shared outside project to tex directory.

--- a/tex/latex/PalisadesLakes/PalisadesLakesArticle.cls
+++ b/tex/latex/PalisadesLakes/PalisadesLakesArticle.cls
@@ -39,7 +39,7 @@
 
 %-----------------------------------------------------------------
 \def \sharedFolder {../shared/}
-\import{\sharedFolder}{glossary}
+\input{glossary}
 
 \AtEndDocument {\appendix\FinishArticle}
 %-----------------------------------------------------------------
