remove definitions of \sharedFolder

--- a/templates/body.tex
+++ b/templates/body.tex
@@ -49,6 +49,7 @@ for its content than computer programs.
 
 \end{plSection}%{Colors}
 %-----------------------------------------------------------------
+\def\sharedFolder{../shared/}
 \import{\sharedFolder}{writing}
 %-----------------------------------------------------------------
 \import{\sharedFolder}{computation}
