--- a/shared/sets.tex
+++ b/shared/sets.tex
@@ -1163,6 +1163,8 @@ and (2) approaching but never reaching a limit,
 always getting closer, steadily making 'progress' in some sense.
 \end{plSection}%{Church, G\"{o}del, Turing}
 %-----------------------------------------------------------------
+\input{cartesian-products}
+%-----------------------------------------------------------------
 \end{plSection}%{Sets}
 %-----------------------------------------------------------------
 
