--- a/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
+++ b/bibtex/bib/PalisadesLakes/PalisadesLakes.bib
@@ -3604,7 +3604,7 @@ and no access to mantissa or exponent is necessary.
   year         = {2017},
 }
 
-@Book{Reed:Simon:1972:FunctionalAnalysis,
+@Book{ReedSimon:1972:FunctionalAnalysis,
   author    = {Michael Reed and Barry Simon},
   title     = {Methods of Modern Mathematical Physics I: Functional Analysis},
   publisher = {Academic Press},
