--- a/tex/latex/PalisadesLakes/PalisadesLakes.sty
+++ b/tex/latex/PalisadesLakes/PalisadesLakes.sty
@@ -337,8 +337,8 @@ BoldItalicFont = *08-Italic ]
 \NewDocumentCommand{\Mesh}{m}{\mathcal{#1}}
 
 \NewDocumentCommand{\Integers}{}{\Space{Z}}
-\NewDocumentCommand{\Reals}{}{\Space{R}}    % Real numbers
-\NewDocumentCommand{\Quaternions}{}{\Space{Q}}    % set of Quaternions
+\NewDocumentCommand{\Reals}{}{\Space{R}}
+\NewDocumentCommand{\Quaternions}{}{\Space{Q}}
 
 \NewDocumentCommand{\Identity}{}{\mathsf{I}}
 
