make diagrams unbreakable

--- a/tex/latex/PalisadesLakes/PalisadesLakes.sty
+++ b/tex/latex/PalisadesLakes/PalisadesLakes.sty
@@ -1251,7 +1251,7 @@ citecolor=citecolor,
  ChunkParent=plMath,
  }%
  
- \plNewChunk[][]
+ \plNewChunk[][breakable=false]
  {ChunkType=diagram,
   ChunkBackgroundColor=mathBackground,
   ChunkParent=plMath,
