--- a/tex/latex/PalisadesLakes/PalisadesLakes.sty
+++ b/tex/latex/PalisadesLakes/PalisadesLakes.sty
@@ -126,7 +126,7 @@
 %-----------------------------------------------------------------
 % fonts
 %-----------------------------------------------------------------
-\RequirePackage[T1]{fontenc}
+%\RequirePackage[T1]{fontenc}
 \RequirePackage[]{fontspec}[2020/02/21]
 \defaultfontfeatures{Scale=MatchLowercase}
 %\RequirePackage{yfonts}[2019/04/04]
@@ -179,20 +179,67 @@
 %\setmainfont{Perpetua}[Scale=1.1]
 %\setmainfont{Times New Roman}
 %-----------------------------------------------------------------
-% sans font
-%-----------------------------------------------------------------
-% https://www.microsoft.com/typography/fonts/family.aspx?FID=155
-\setsansfont{Gill Sans MT} 
-
-% http://arkandis.tuxfamily.org/adffonts.html
-%\setsansfont{Gillius ADF}
-%-----------------------------------------------------------------
 % cjk fonts
 %-----------------------------------------------------------------
 % \usepackage{xeCJK}
 % \setCJKmainfont{SimHei}
 % \setCJKsansfont{SimHei}
 % \setCJKmonofont{Lucida Sans Typewriter}
+
+\setmainfont{EB Garamond}
+[
+FontFace={lb}{n}{Font=* Medium},
+FontFace={sb}{n}{Font=* SemiBold},
+FontFace={eb}{n}{Font=* ExtraBold},
+Numbers={OldStyle,Proportional},
+RawFeature={
+% %+aalt, % all characters tiny 
+% %+c2pc, % all caps petite
+% %+c2sc, % all caps small
+% +case, % effect not obvious, re-test
+% %+dlig, % some weird ligatures
+% %+frac, % small digits out of position
+% %+hist, % all s go to f-ish shape
+% +hlig, % no obvious effect
+% +kern, % no obvious effect
+% +liga, % no obvious effect
+% %+lnum, % all digits same size, rise, drop
+% %+mark, % no obvious effect
+% %+mkmk, % no obvious effect
+% %+onum, % no obvious effect
+% %+ordn, % no obvious effect
+% %+pcap, % caps/smallcaps for all
+% %+pnum, % no obvious effect
+% %+sinf, % all characters tiny 
+% %+smcp, % all text csc
+% %+ss01, % all text csc
+% %+ss02, % text (not math) parens turn into pointing hands
+% %+ss03, % no obvious effect,except all digits same
+% %+ss04, % text (not math) parens turn into flourished leaves
+% %+ss05, % no obvious effect
++ss06, % no obvious effect
+% %+ss07, % all s go to f-ish shape
+% %+subs, % all characters tiny
+% %+sups, % all characters tiny
+% %+swsh, % page header all swashed, italic caps swashed
+% %+tnum, % no obvious effect
+}
+]
+\DeclareRobustCommand{\lbseries}{\fontseries{lb}\selectfont}
+\DeclareRobustCommand{\sbseries}{\fontseries{sb}\selectfont}
+\DeclareRobustCommand{\ebseries}{\fontseries{eb}\selectfont}
+\DeclareTextFontCommand{\textlb}{\sbseries}
+\DeclareTextFontCommand{\textsb}{\sbseries}
+\DeclareTextFontCommand{\texteb}{\ebseries}
+
+%-----------------------------------------------------------------
+% sans font
+%-----------------------------------------------------------------
+% https://www.microsoft.com/typography/fonts/family.aspx?FID=155
+\setsansfont{Gill Sans MT}[Scale=MatchLowercase] 
+
+% http://arkandis.tuxfamily.org/adffonts.html
+%\setsansfont{Gillius ADF}
 %-----------------------------------------------------------------
 % math packages
 %-----------------------------------------------------------------
@@ -203,9 +250,6 @@
 % math fonts
 %-----------------------------------------------------------------
 %\setmainfont{texgyrepagella-regular.otf}
-
-\setmainfont{EB Garamond}[Numbers={OldStyle,Proportional},RawFeature={+ss06,+dlig,+kern}]
-
 \RequirePackage[math-style=ISO,bold-style=ISO,sans-style=italic,partial=upright]{unicode-math}[2020/01/30]
 % \RequirePackage[math-style=ISO,bold-style=ISO,sans-style=upright]{unicode-math}[2020/01/30]
 % \RequirePackage[math-style=TeX]{unicode-math}[2020/01/30]
@@ -213,7 +257,7 @@
 % \RequirePackage[math-style=upright]{unicode-math}[2020/01/30]
 % \RequirePackage[math-style=literal]{unicode-math}[2020/01/30]
 
-\setmathfont{texgyrepagella-math.otf}
+%\setmathfont{texgyrepagella-math.otf}
 
 % lots of missing symbols
 %\setmathfont{XITS Math}[version=xits]
@@ -260,7 +304,6 @@
 
 % lots of missing symbols
 %\setmathfont{TeX Gyre DejaVu Math}[version=dejavu]
-
 
 %-----------------------------------------------------------------
 % local symbol defs 
@@ -609,13 +652,10 @@ backref=true,
 \RequirePackage{titling}[2009/09/04]
 %\newfontfamily\titlefont[Scale=MatchUppercase]{Gill Sans MT}
 %\renewcommand{\maketitlehooka}{\titlefont}
-%\pretitle{\begin{flushright}\Huge\sffamily\bfseries}
-\pretitle{\begin{flushright}\Huge\scshape\bfseries}
+\pretitle{\begin{flushright}\Huge\scshape\lbseries}
 \posttitle{\par\end{flushright}\vskip 0.25em}
-%\preauthor{\begin{flushright}\sffamily\scshape\mdseries}
 \preauthor{\begin{flushright}\scshape\mdseries}
 \postauthor{\par\end{flushright}}
-%\predate{\begin{flushright}\sffamily\scshape\mdseries}
 \predate{\begin{flushright}\scshape\mdseries}
 \postdate{\par\end{flushright}}
 \setlength{\droptitle}{-80pt}
@@ -637,37 +677,37 @@ backref=true,
 % TODO: consistent font size across sections and other chunks
 % TODO: spacing should be relative to font size
 
-\titleformat{\part}[hang]{\huge\scshape\mdseries}
+\titleformat{\part}[hang]{\huge\scshape\lbseries}
   {\thepart}{0.5em}{}
 
-\titleformat{\chapter}[hang]{\LARGE\scshape\mdseries}
+\titleformat{\chapter}[hang]{\LARGE\scshape\lbseries}
   {\thechapter}{0.5em}{}
 
-\titleformat{\section}[hang]{\Large\scshape\mdseries}
+\titleformat{\section}[hang]{\Large\scshape\lbseries}
   {\thesection}{0.5em}{}
 \titlespacing\section{0pt}
   {16pt plus 16pt minus 2pt}
   {5pt plus 5pt minus 2pt}
 
-\titleformat{\subsection}[hang]{\large\scshape\mdseries}
+\titleformat{\subsection}[hang]{\large\scshape\lbseries}
   {\thesubsection}{0.5em}{}
 \titlespacing\subsection{0pt}
   {14pt plus 14pt minus 2pt}
   {5pt plus 5pt minus 2pt}
 
-\titleformat{\subsubsection}[hang]{\large\scshape\mdseries}
+\titleformat{\subsubsection}[hang]{\large\scshape\lbseries}
   {\thesubsubsection}{0.5em}{}
 \titlespacing\subsubsection{0pt}
   {12pt plus 12pt minus 2pt}
   {5pt plus 5pt minus 2pt}
 
-\titleformat{\paragraph}[hang]{\normalsize\scshape\mdseries}
+\titleformat{\paragraph}[hang]{\normalsize\scshape\lbseries}
 {\theparagraph}{0.5em}{}
 \titlespacing\paragraph{0pt}
   {12pt plus 12pt minus 2pt}
   {5pt plus 5pt minus 2pt}
 
-\titleformat{\subparagraph}[hang]{\normalsize\scshape\mdseries}
+\titleformat{\subparagraph}[hang]{\normalsize\scshape\lbseries}
 {\thesubparagraph}{0.5em}{}
 \setcounter{secnumdepth}{7}
 \titlespacing\subparagraph{0pt}
