--- a/shared/spaces.tex
+++ b/shared/spaces.tex
@@ -17,8 +17,7 @@ with a neighborhood contained
 in the set.
 
 \textit{Exterior}: elements not in set
-with a neighborhood not intersecting the
-in the set.
+with a neighborhood not intersecting the set.
 
 \textit{Boundary}: elements where every neighborhood
 intersects both the interior and the exterior.
