xits still not working

--- a/shared/feferman.tex
+++ b/shared/feferman.tex
@@ -77,7 +77,7 @@ $\card(\Space{R}) < \card(2^{\Space{R}})$?
 Doesn't seem obvious.
 \hfill\break
 How does all this play with 
-the Hilbert hotel paradox? \citeAuthorYearTitle{wiki:HilbertHotel}
+the Hilbert hotel paradox? \citeAuthorTitle{wiki:HilbertHotel}
 (Problem with Hilbert hotel is 
 always space for new customer, if everybody moves one room up,
 but infinite time required to make that space.)
