--- a/shared/topos.tex
+++ b/shared/topos.tex
@@ -502,9 +502,7 @@ with how we examine them.
 \end{plQuote}
 
 \begin{plQuote}
-{Somewhat confused anonymous article in
-Quanta and WIRED 
-magazines \citeAuthorYearTitle{Hartnett:2019:Lurie,Quanta:2019:Lurie}:}
+{\citeAuthorYearTitle{Hartnett:2019:Lurie,Quanta:2019:Lurie}:}
 {}
 The most prominent figure in this community is Jacob Lurie. 
 \\
@@ -892,7 +890,7 @@ patched on) vs Python.
 \begin{plSection}{Right abstraction?}
 \label{sec:Right-abstraction}
 
-Is category theory a good language? \citeAuthorYearTitle{wiki:AbstractNonsense}
+Is category theory a good language? \citeAuthorTitle{wiki:AbstractNonsense}
 
 Is part of the attraction due to being able accumulate
 theorem-credits by publishing
@@ -908,14 +906,14 @@ directed multigraph.
 
 
 Is this question related to concrete 
-categories? \citeAuthorYearTitle{wiki:ConcreteCategory}
+categories? \citeAuthorTitle{wiki:ConcreteCategory}
 
 \end{plSection}%{Right abstraction?}
 %-----------------------------------------------------------------
 \begin{plSection}{Naming}
 \label{sec:Naming}
 
-Is category theory a good language? \citeAuthorYearTitle{wiki:AbstractNonsense}
+Is category theory a good language? \citeAuthorTitle{wiki:AbstractNonsense}
 
 Generally, mathematicians aren't good at naming:
 eg, what's round about a ring?
@@ -1096,9 +1094,9 @@ API.
 Every thing mentioned below is a first class thing in the universe.
 % Many of these things contain references to other things.
 % Some of these things are sets,
-% some are atoms (aka ``ur-elements'' \citeAuthorYearTitle{wiki:Urelement}). \\
+% some are atoms (aka ``ur-elements'' \citeAuthorTitle{wiki:Urelement}). \\
 % Many versions of set theory do without 
-% atoms \citeAuthorYearTitle{wiki:ConstructibleUniverse,wiki:VonNeumannUniverse},
+% atoms \citeAuthorTitle{wiki:ConstructibleUniverse,wiki:VonNeumannUniverse},
 % starting from the empty set, implementing $\mathcal{N}$
 % (and everything else of interest) via various sets of sets that
 % bottom out with $\emptyset$.
