--- a/tests/fonts.tex
+++ b/tests/fonts.tex
@@ -25,8 +25,8 @@
 \PalisadesLakesTableOfContents
 %-----------------------------------------------------------------
 \def\sharedFolder{../shared/}
-\import{\sharedFolder}{spaces}
-%\import{\sharedFolder}{derivatives}
+%\import{\sharedFolder}{spaces}
+\import{\sharedFolder}{derivatives}
 %\import{\sharedFolder}{category}
 %-----------------------------------------------------------------
 \end{document}
